--- a/app/views/shared/_comment_item.html.erb
+++ b/app/views/shared/_comment_item.html.erb
@@ -1,6 +1,6 @@
 <% if comment_item.user %>
 <li id="<%= comment_item.id %>">  
-  <%= link_to gravatar_for(comment_item.user ), comment_item.user %>
+  <%= link_to gravatar_for(comment_item.user , size: 20), comment_item.user %>
   <span class="user">
     <%= link_to comment_item.user.name, comment_item.user %>
   </span>
