--- a/app/views/shared/_comment_form.html.erb
+++ b/app/views/shared/_comment_form.html.erb
@@ -1,5 +1,10 @@
 
- <% if ((!current_user.nil?) && current_user.following?(@entry_item.user)) %>
+ 
+
+
+
+
+ <% if (signed_in? && (current_user?(@entry_item.user)||current_user.following?(@entry_item.user)))%>
 <%= form_for(@comment) do |f| %>
    <%= render 'shared/error_messages', object: f.object %>
   <div class="field">
